--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -14,6 +14,7 @@ java:
     OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
     OIDC_CLIENT_SECRET: NVYEC2X7XFSRENTU
     OIDC_S2S_SECRET: G5XTFNBUW4P6ZP4F
+    LAUNCH_DARKLY_USER_NAME_PREFIX: aat
 
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
