--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -21,6 +21,7 @@ java:
     OIDC_ISSUER: "https://forgerock-am.service.core-compute-idam-{{ .Values.global.environment }}.internal:8443/openam/oauth2/hmcts"
     OIDC_S2S_MICROSERVICE_NAME: ccpay_bubble
     OIDC_AUDIENCE_LIST: paybubble,cmc_citizen,probate,divorce,xuiwebapp,xuimowebapp,xuiaowebapp,fees_admin_frontend,finrem,bar_frontend,fpl_case_service,ccd_gateway,iac
+    LAUNCH_DARKLY_USER_NAME_PREFIX: {{ .Values.global.environment }}
 
     AUTH_PROVIDER_SERVICE_CLIENT_BASEURL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     AUTH_IDAM_CLIENT_BASEURL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
