PAY-3511 - Launch darkly new implementation changes.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -86,6 +86,7 @@ payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:sdk-06456c8b-312c-475c-b154-ca585f5ca063}
+launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:local}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
