--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -135,6 +135,7 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:dummy}
+launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:dummy}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
