--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -23,6 +23,7 @@ gov.pay.keys.cmc=${GOV_PAY_AUTH_KEY_CMC:abcdef123456abcdef123456}
 mock.callback.url.endpoint=${TEST_URL:http://payment-api-aat-staging.service.core-compute-aat.internal}/mock-api/serviceCallback
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:sdk-06456c8b-312c-475c-b154-ca585f5ca063}
+launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:functionaltest}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
