--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.owasp.dependencycheck' version '5.2.4'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
-    id 'findbugs'
+    //id 'findbugs'
     id 'jacoco'
 }
 
@@ -23,8 +23,8 @@ allprojects {
     }
     version = rootProject.file('version.txt').text.trim() + ".${buildNumber}"
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 11
+    targetCompatibility = 11
 
     repositories {
         mavenLocal()
@@ -55,7 +55,7 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: "jacoco"
-    apply plugin: "findbugs"
+    //apply plugin: "findbugs"
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -75,7 +75,7 @@ subprojects {
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
@@ -88,12 +88,25 @@ subprojects {
             }
         }
 
+
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        /*functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
+
+
+
+
     }
 
     test {
         finalizedBy jacocoTestReport
         jacoco {
-            append = true
+           // append = true
             destinationFile = file("${project.rootDir}/build/jacoco/test.exec")
         }
     }
@@ -106,14 +119,14 @@ subprojects {
         }
     }
 
-    findbugs {
+    /*findbugs {
         ignoreFailures = false
         reportsDir = file("$project.buildDir/reports/findbugs")
         effort = "max"
         reportLevel = "high"
         includeFilter = file("$rootProject.projectDir/findbugs-security-include.xml")
         excludeFilter = file("$rootProject.projectDir/findbugs-security-exclude.xml")
-    }
+    }*/
 }
 
 dependencies {
