--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "info.solidsoft.pitest" version '1.3.0'
+    id "info.solidsoft.pitest" version '1.5.1'
 }
 
 apply from: 'liquibase.gradle'
@@ -42,8 +42,8 @@ sonarqube {
 }
 
 def versions = [
-        pitest      : '1.3.2',
-        gradlePitest: '1.3.0',
+        pitest      : '1.5.1',
+        //gradlePitest: '1.5.1',
         sonarPitest : '0.5'
 ]
 
@@ -122,18 +122,23 @@ dependencies {
 
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
 
-    compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
-    compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
+    compile group: 'org.pitest', name: 'pitest', version: versions.pitest
+    compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
     compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
 
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+    /*compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
 
 }
 
@@ -161,7 +166,9 @@ pitest {
                        'uk.gov.hmcts.payment.api.reports.config.*']
     threads = 10
     outputFormats = ['XML', 'HTML']
-    historyInputLocation = ['build/reports/pitest/fastermutationtesting']
-    historyOutputLocation = ['build/reports/pitest/fastermutationtestingoutput']
+    historyInputLocation = 'build/reports/pitest/fastermutationtesting'
+    historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
     mutationThreshold = 90
 }
+
+
