--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '5.3.0'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
-    //id 'findbugs'
     id 'jacoco'
 }
 
@@ -62,7 +61,6 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: "jacoco"
-    //apply plugin: "findbugs"
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -75,6 +73,7 @@ subprojects {
     }
 
     dependencies {
+        compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -82,7 +81,6 @@ subprojects {
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
-        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
@@ -98,12 +96,6 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-
-
-        /*compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
     }
 
     test {
@@ -121,15 +113,6 @@ subprojects {
             html.enabled true
         }
     }
-
-    /*findbugs {
-        ignoreFailures = false
-        reportsDir = file("$project.buildDir/reports/findbugs")
-        effort = "max"
-        reportLevel = "high"
-        includeFilter = file("$rootProject.projectDir/findbugs-security-include.xml")
-        excludeFilter = file("$rootProject.projectDir/findbugs-security-exclude.xml")
-    }*/
 }
 
 dependencies {
