PAY-3390 : Java 11 Upgrade

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,11 @@ subprojects {
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     }
 
+    jacoco {
+        toolVersion = versions.jacocoVersion
+        reportsDir = file("${project.rootDir}/build/jacoco")
+    }
+
     test {
         finalizedBy jacocoTestReport
         jacoco {
