--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
 //    id 'findbugs'
     id 'jacoco'
+    id "io.freefair.lombok" version "5.1.0"
 }
 
 def springBootVersion = '2.1.6.RELEASE'
