--- a/api/build.gradle
+++ b/api/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     functionalTestCompile sourceSets.test.runtimeClasspath
 
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
     functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
