--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -134,3 +134,4 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 #hystrix.command.default.circuitBreaker.enabled=false
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
+bulk.scanning.payments.processed.url=${BULK_SCANNING_URL:https://ccpay-bulkscanning-api.platform.hmcts.net}
