--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "info.solidsoft.pitest" version '1.3.0'
+    id 'jacoco'
 }
 
 apply from: 'liquibase.gradle'
@@ -20,14 +21,6 @@ sourceSets {
             compileClasspath += main.output
             runtimeClasspath += main.output
             srcDir file('src/functionalTest/java')
-        }
-    }
-
-    test {
-        java {
-            compileClasspath += main.output
-            runtimeClasspath += main.output
-            srcDir file('src/test/java')
         }
     }
 
