--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,6 @@ allprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    jacoco {
-        toolVersion = "0.8.4"
-    }
     repositories {
         mavenLocal()
         maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
@@ -57,8 +54,9 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: "jacoco"
-    apply plugin: "findbugs"
+    apply plugin: 'jacoco'
+    apply plugin: 'findbugs'
+
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -68,10 +66,6 @@ subprojects {
         testLogging {
             exceptionFormat = 'full'
         }
-    }
-
-    jacoco {
-        toolVersion = "0.8.4"
     }
 
     dependencies {
@@ -102,17 +96,25 @@ subprojects {
 
     test {
         finalizedBy jacocoTestReport
-        jacoco {
+        /*jacoco {
             append = true
             destinationFile = file("${project.rootDir}/build/jacoco/test.exec")
-        }
+        }*/
+
+    }
+
+    jacoco {
+        toolVersion = "0.8.5"
+        reportsDir = file("${project.rootDir}/build/jacoco/test.exec")
     }
 
     jacocoTestReport {
-        executionData(test)
+        dependsOn test
+        //executionData(test)
         reports {
-            xml.enabled true
-            html.enabled true
+            xml.enabled = true
+            csv.enabled = false
+            html.destination = file("${project.rootDir}/build/jacoco/jacocoTestReport.html")
         }
     }
 
