--- a/api/build.gradle
+++ b/api/build.gradle
@@ -122,10 +122,23 @@ dependencies {
     // functional
     functionalTestCompile sourceSets.test.runtimeClasspath
 
+
+
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
-    compileOnly 'org.projectlombok:lombok:1.18.10'
+/*    compileOnly 'org.projectlombok:lombok:1.18.10'
     functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+
+
     compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
     compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
     compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
