--- a/build.gradle
+++ b/build.gradle
@@ -79,9 +79,18 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
+/*
         compileOnly 'org.projectlombok:lombok:1.18.10'
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+*/
+
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+
+
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
             sourceSets {
                 main {
@@ -114,7 +123,7 @@ subprojects {
         reports {
             xml.enabled = true
             csv.enabled = false
-            html.destination = file("${project.rootDir}/build/jacoco/jacocoTestReport.html")
+            html.destination = file("${project.buildDir}/build/jacoco/jacocoTestReport.html")
         }
     }
 
@@ -178,15 +187,15 @@ sonarqube {
     properties {
         property "sonar.host.url", "https://sonar.reform.hmcts.net/"
         property "sonar.dynamicAnalysis", "reuseReports"
-        property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
+        //property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.coverage.jacoco.htmlReportPaths", "${project.buildDir}/build/jacoco/jacocoTestReport.html"
         property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
         property "sonar.exclusions", sonarExclusions.join(", ")
         property "sonar.test.exclusions", sonarExclusions.join(", ")
         property "sonar.coverage.exclusions", sonarExclusions.join(", ")
     }
 }
-project.tasks['sonarqube'].dependsOn jacocoTestReport
+project.tasks['sonarqube'].dependsOn test, jacocoTestReport
 
 task smoke(type: GradleBuild, description: 'Runs smoke tests', group: 'Verification') {
     buildFile = './api/build.gradle'
