--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'idea'
+    apply plugin: 'jacoco'
 
     group = 'uk.gov.hmcts.reform.payment'
     ext {
@@ -79,11 +80,6 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
-/*
-        compileOnly 'org.projectlombok:lombok:1.18.10'
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-*/
 
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
@@ -121,7 +117,8 @@ subprojects {
         dependsOn test
         executionData(test)
         reports {
-            xml.enabled = true
+            html.enabled = true
+            xml.enabled = false
             csv.enabled = false
             html.destination = file("${project.buildDir}/build/jacoco/jacocoTestReport.html")
         }
@@ -187,7 +184,7 @@ sonarqube {
     properties {
         property "sonar.host.url", "https://sonar.reform.hmcts.net/"
         property "sonar.dynamicAnalysis", "reuseReports"
-        //property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.coverage.jacoco.htmlReportPaths", "${project.buildDir}/build/jacoco/jacocoTestReport.html"
         property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
         property "sonar.exclusions", sonarExclusions.join(", ")
