--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'idea'
+    apply plugin: 'jacoco'
 
     group = 'uk.gov.hmcts.reform.payment'
     ext {
