--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'application'
-    id "org.sonarqube" version "2.6.2"
+    id "org.sonarqube" version "3.0"
     id 'org.springframework.boot' version '2.1.6.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.2.4'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.owasp.dependencycheck' version '5.3.0'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
-    id 'findbugs'
     id 'jacoco'
 }
 
@@ -24,8 +23,8 @@ allprojects {
     }
     version = rootProject.file('version.txt').text.trim() + ".${buildNumber}"
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = versions.javaVersion
+    targetCompatibility = versions.javaVersion
 
     repositories {
         mavenLocal()
@@ -56,7 +55,6 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: "jacoco"
-    apply plugin: "findbugs"
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -69,6 +67,7 @@ subprojects {
     }
 
     dependencies {
+        compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -119,15 +118,6 @@ subprojects {
             xml.enabled = true
             html.destination = file("${project.buildDir}/build/jacoco/jacocoTestReport.html")
         }
-    }
-
-    findbugs {
-        ignoreFailures = false
-        reportsDir = file("$project.buildDir/reports/findbugs")
-        effort = "max"
-        reportLevel = "high"
-        includeFilter = file("$rootProject.projectDir/findbugs-security-include.xml")
-        excludeFilter = file("$rootProject.projectDir/findbugs-security-exclude.xml")
     }
 }
 
