--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ subprojects {
     test {
         finalizedBy jacocoTestReport
         jacoco {
-            append = true
+            //append = true
             destinationFile = file("${project.rootDir}/build/jacoco/test.exec")
         }
 
