--- a/api/build.gradle
+++ b/api/build.gradle
@@ -45,7 +45,8 @@ sonarqube {
 def versions = [
         pitest      : '1.3.2',
         gradlePitest: '1.3.0',
-        sonarPitest : '0.5'
+        sonarPitest : '0.5',
+        lombok: '1.18.12'
 ]
 
 def javaLoggingVersion = '5.1.1'
@@ -108,7 +109,7 @@ dependencies {
 
     testCompile group: 'com.github.tomakehurst', name: 'wiremock'
 
-    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    testCompile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
 
@@ -123,15 +124,20 @@ dependencies {
 
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
 
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    /*compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
 
+
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
     compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
     compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
