--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ def springCloudVersion = 'Finchley.SR2'
 def versions = [
         lombok: '1.18.12',
         javaVersion: '11',
-        jacocoVersion: '0.8.4'
+        jacocoVersion: '0.8.5'
 ]
 
 allprojects {
@@ -82,15 +82,19 @@ subprojects {
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
 
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+
+        /*compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'*/
 
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
             sourceSets {
@@ -114,7 +118,7 @@ subprojects {
     }
 
     jacoco {
-        toolVersion = "0.8.5"
+        toolVersion = versions.javaVersion
     }
 
     jacocoTestReport {
