--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id "info.solidsoft.pitest" version '1.3.0'
-    id 'jacoco'
+    id "info.solidsoft.pitest" version '1.5.1'
 }
 
 apply from: 'liquibase.gradle'
@@ -43,7 +42,7 @@ sonarqube {
 }
 
 def versions = [
-        pitest      : '1.3.2',
+        pitest      : '1.5.1',
         gradlePitest: '1.3.0',
         sonarPitest : '0.5',
         lombok: '1.18.12'
@@ -168,8 +167,8 @@ pitest {
                        'uk.gov.hmcts.payment.api.reports.config.*']
     threads = 10
     outputFormats = ['XML', 'HTML']
-    historyInputLocation = ['build/reports/pitest/fastermutationtesting']
-    historyOutputLocation = ['build/reports/pitest/fastermutationtestingoutput']
+    historyInputLocation = 'build/reports/pitest/fastermutationtesting'
+    historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
     mutationThreshold = 90
 }
 
