--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,43 @@ allprojects {
             }
         }
     }
+
+
+    tasks.register("codeCoverageReport", JacocoReport) {
+        // If a subproject applies the 'jacoco' plugin, add the result it to the report
+        subprojects { subproject ->
+            subproject.plugins.withType(JacocoPlugin).configureEach {
+                subproject.tasks.matching({ t -> t.extensions.findByType(JacocoTaskExtension) }).configureEach { testTask ->
+                    sourceSets subproject.sourceSets.main
+                    executionData(testTask)
+                }
+
+                // To automatically run `test` every time `./gradlew codeCoverageReport` is called,
+                // you may want to set up a task dependency between them as shown below.
+                // Note that this requires the `test` tasks to be resolved eagerly (see `forEach`) which
+                // may have a negative effect on the configuration time of your build.
+                /* subproject.tasks.matching({ t -> t.extensions.findByType(JacocoTaskExtension) }).forEach {
+                     rootProject.tasks.codeCoverageReport.dependsOn(it)
+                 }*/
+            }
+        }
+
+        // enable the different report types (html, xml, csv)
+        reports {
+            // xml is usually used to integrate code coverage with
+            // other tools like SonarQube, Coveralls or Codecov
+            xml.enabled true
+
+            // HTML reports can be used to see code coverage
+            // without any external tools
+            html.enabled true
+        }
+    }
+
+    codeCoverageReport.dependsOn {
+        subprojects*.test
+    }
+
 }
 
 subprojects {
@@ -100,7 +137,7 @@ subprojects {
 
     }
 
-    test {
+    /*test {
         finalizedBy jacocoTestReport
         jacoco {
             destinationFile = file("${project.rootDir}/build/jacoco/test.exec")
@@ -120,7 +157,7 @@ subprojects {
             xml.enabled = true
             html.destination = file("${project.buildDir}/build/jacoco/jacocoTestReport.html")
         }
-    }
+    }*/
 }
 
 dependencies {
@@ -174,8 +211,9 @@ sonarqube {
         property "sonar.host.url", "https://sonar.reform.hmcts.net/"
         property "sonar.dynamicAnalysis", "reuseReports"
         property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
+        //property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
         property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
         property "sonar.exclusions", sonarExclusions.join(", ")
         property "sonar.test.exclusions", sonarExclusions.join(", ")
         property "sonar.coverage.exclusions", sonarExclusions.join(", ")
