Code Review Changes

--- a/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1554989041418-20
+      id: 1554989041418-25
       author: ayan
       changes:
         - createTable:
@@ -14,10 +14,19 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
+                  constraints:
+                    nullable: false
                   name: payment_id
                   type: INT
               - column:
+                  constraints:
+                    nullable: false
                   name: fee_id
+                  type: INT
+              - column:
+                  constraints:
+                    nullable: false
+                  name: payment_link_id
                   type: INT
               - column:
                   name: fee_amount
@@ -46,6 +55,18 @@ databaseChangeLog:
               - column:
                   name: date_updated
                   type: TIMESTAMP WITHOUT TIME ZONE
+  - changeSet:
+      id: 1554989041418-30
+      author: ayan
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: payment_link_id
+            baseTableName: fee_pay_apportion
+            constraintName: FK_3c04152jyub2e59dll71122
+            deferrable: false
+            initiallyDeferred: false
+            referencedColumnNames: id
+            referencedTableName: payment_fee_link
   - changeSet:
       id: 1554989046143-21
       author: ayan
@@ -82,6 +103,8 @@ databaseChangeLog:
                   ('payment_created', 'Valid payment received and recorded successfully'),
                   ('payment_updated', 'Payment updated successfully'),
                   ('fee_created', 'Valid fee received and recorded successfully'),
+                  ('fee_updated', 'Fee updated successfully'),
+                  ('fee_removed', 'Fee removed successfully'),
                   ('remission_applied', 'Valid remission received and applied to fee successfully'),
                   ('payment_apportioned', 'Valid payment received and fee apportioned successfully');
   - changeSet:
@@ -116,6 +139,18 @@ databaseChangeLog:
               - column:
                   name: date_updated
                   type: TIMESTAMP WITHOUT TIME ZONE
+  - changeSet:
+      id: 1554989041418-29
+      author: ayan
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: audit_type
+            baseTableName: payment_audit_history
+            constraintName: FK_boc1od01im5po7i8e5b7890
+            deferrable: false
+            initiallyDeferred: false
+            referencedColumnNames: name
+            referencedTableName: audit_events_type
 
 # Apportionment DB Model Rollback Scripts
 #  - changeSet:
@@ -130,7 +165,6 @@ databaseChangeLog:
 #              DROP TABLE audit_events_type;
 #              DROP TABLE payment_audit_history;
 #              ALTER TABLE fee DROP COLUMN amount_due;
-#              ALTER TABLE fee DROP COLUMN date_apportioned;
 #              ALTER TABLE fee DROP COLUMN date_created;
 #              ALTER TABLE fee DROP COLUMN date_updated;
 
