--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -45,7 +45,7 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
 
-trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES:cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service}
+trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES:cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac}
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
