--- a/api/build.gradle
+++ b/api/build.gradle
@@ -66,7 +66,7 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
-  compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'0.25.1.RELEASE'
+  //compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'0.25.1.RELEASE'
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
   compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
@@ -92,11 +92,20 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     compile group: 'org.springframework.retry', name: 'spring-retry'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:'2.2.1.RELEASE'
-    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.2.0'
-    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.2.0'
+    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
+    compile (group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'){
+        exclude(module: 'spring-test')
+    }
+    compile group: 'org.springframework', name: 'spring-test', version: '5.2.8.RELEASE'
     compile group: 'com.netflix.feign', name: 'feign-jackson', version: '8.18.0'
     compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.0.4'
+
+    //Added this for spring boot upgrade as swagger was not working with the latest version.
+    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
+    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
+        exclude(module: 'spring-plugin-core')
+    }
 
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
         exclude(module: 'commons-logging')
