Removed few dependencies

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -92,10 +92,7 @@ dependencies {
     compile group: 'org.springframework.retry', name: 'spring-retry'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:'2.2.1.RELEASE'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
-    compile (group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'){
-        exclude(module: 'spring-test')
-    }
-    compile group: 'org.springframework', name: 'spring-test', version: '5.2.8.RELEASE'
+    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     compile group: 'com.netflix.feign', name: 'feign-jackson', version: '8.18.0'
     compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.0.4'
