Code refactoring and review comments fix.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -22,6 +22,23 @@ pci-pal.api.key=${PCI_PAL_API_KEY:pci-pal-api-key}
 pci-pal.callback-url=${PCI_PAL_CALLBACK_URL:pci-pal-callback-url}
 paybubble.home.url=${PAYBUBBLE_HOME_URL:https://test.url.com}
 
+#PCI-PAL-Antenna
+pci-pal.antenna.grant.type=${PCI_PAL_ANTENNA_GRANT_TYPE:dummy}
+pci-pal.antenna.tenant.name=${PCI_PAL_ANTENNA_TENANT_NAME:dummy}
+pci-pal.antenna.user.name=${PCI_PAL_ANTENNA_USER_NAME:dummy}
+pci-pal.antenna.client.id=${PCI_PAL_ANTENNA_CLIENT_ID:dummy}
+pci-pal.antenna.client.secret=${PCI_PAL_ANTENNA_CLIENT_SECRET:dummy}
+pci-pal.antenna.get.tokens.url=${PCI_PAL_ANTENNA_GET_TOKENS_URL:dummy}
+pci-pal.antenna.launch.url=${PCI_PAL_ANTENNA_LAUNCH_URL:dummy}
+pci-pal.antenna.view.id.url=${PCI_PAL_ANTENNA_VIEW_ID_URL:dummy}
+pci-pal.antenna.return.url=${PCI_PAL_ANTENNA_RETURN_URL:dummy}
+pci-pal.antenna.cmc.flow.id=${PCI_PAL_ANTENNA_CMC_FLOW_ID:dummy}
+pci-pal.antenna.probate.flow.id=${PCI_PAL_ANTENNA_PROBATE_FLOW_ID:dummy}
+pci-pal.antenna.divorce.flow.id=${PCI_PAL_ANTENNA_DIVORCE_FLOW_ID:dummy}
+pci-pal.antenna.financial.remedy.flow.id=${PCI_PAL_ANTENNA_FINANCIAL_REMEDY_FLOW_ID:dummy}
+
+
+
 #CCD Data Store
 core_case_data.api.url=${CORE_CASE_DATA_API_URL:http://localhost:4452}
 
