PAY-3637- Payment s2s token generation changes

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -12,10 +12,10 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
-auth.idam.client.baseUrl=http://localhost:23443
-auth.provider.service.client.baseUrl=http://localhost:23443
+auth.idam.client.baseUrl=http://localhost:5000
+auth.provider.service.client.baseUrl=http://localhost:8489
 
-trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
+trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,internal
 
 card.payments.report.scheduler.enabled = ${CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 card.payments.email.from=${CARD_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
@@ -71,7 +71,7 @@ management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
-fees.register.url=https://fees-register-api.platform.hmcts.net
+fees.register.url=http://localhost:8002
 
 feature.payments.search=false
 feature.payments.service.callback=false
@@ -85,10 +85,15 @@ azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
 payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
-bulk.scanning.payments.processed.url=http://localhost:8001
+bulk.scanning.payments.processed.url=http://localhost:8004
+server.port = 8000
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:sdk-06456c8b-312c-475c-b154-ca585f5ca063}
 launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:local}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
