--- a/api/build.gradle
+++ b/api/build.gradle
@@ -45,7 +45,8 @@ def versions = [
         pitest      : '1.5.1',
         gradlePitest: '1.3.0',
         sonarPitest : '0.5',
-        lombok: '1.18.12'
+        lombok: '1.18.12',
+        reformS2sClient    : '3.1.1'
 ]
 
 def javaLoggingVersion = '5.1.1'
@@ -60,6 +61,7 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
+  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
