--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,10 +5,6 @@ spring.datasource.username=${POSTGRES_USERNAME:payment}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver=org.postgresql.Driver
 
-#HikariCP Settings
-spring.datasource.hikari.leak-detection-threshold=60000
-logging.level.com.zaxxer.hikari=debug
-
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.main.allow-bean-definition-overriding=true
@@ -44,7 +40,9 @@ gov.pay.url=${GOV_PAY_URL:#{https://publicapi.payments.service.gov.uk/v1/payment
 gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
-
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:payment_app}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES:cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac}
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
