PAY-3637- Payment s2s token generation changes

--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -22,5 +22,6 @@ java:
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
+    CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-pr-251.service.core-compute-preview.internal
   postgresql:
     enabled: true
