Service Bus Connection test for Preview

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -123,8 +123,8 @@ feature.discontinued.fees=true
 duplicate.payment.check.interval.in.minutes = 2
 
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
-azure.servicebus.topic-name=serviceCallbackTopic
-azure.servicebus.subscription-name=defaultServiceCallbackSubscription
+azure.servicebus.topic-name=${ASB_TOPIC_NAME:serviceCallbackTopic}
+azure.servicebus.subscription-name=${ASB_SUBSCRIPTION_NAME:defaultServiceCallbackSubscription}
 azure.servicebus.allow-telemetry=false
 
 fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.net}
