PAY-3637- Payment s2s token generation changes

--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -91,3 +91,4 @@ launchDarkly.flushInterval=10
 idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
 idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
+spring.datasource.hikari.maximum-pool-size=2
