PAY-3147- Bulk scan strategic fix changes into demo

--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -102,3 +102,8 @@ pci-pal.antenna.cmc.flow.id=${PCI_PAL_ANTENNA_CMC_FLOW_ID:1356}
 pci-pal.antenna.probate.flow.id=${PCI_PAL_ANTENNA_PROBATE_FLOW_ID:1356}
 pci-pal.antenna.divorce.flow.id=${PCI_PAL_ANTENNA_DIVORCE_FLOW_ID:1356}
 pci-pal.antenna.financial.remedy.flow.id=${PCI_PAL_ANTENNA_FINANCIAL_REMEDY_FLOW_ID:1356}
+
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
+spring.datasource.hikari.maximum-pool-size=2
