--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -106,3 +106,8 @@ pci-pal.antenna.cmc.flow.id=${PCI_PAL_ANTENNA_CMC_FLOW_ID:1356}
 pci-pal.antenna.probate.flow.id=${PCI_PAL_ANTENNA_PROBATE_FLOW_ID:1356}
 pci-pal.antenna.divorce.flow.id=${PCI_PAL_ANTENNA_DIVORCE_FLOW_ID:1356}
 pci-pal.antenna.financial.remedy.flow.id=${PCI_PAL_ANTENNA_FINANCIAL_REMEDY_FLOW_ID:1356}
+
+bulk.scanning.payments.processed.url=http://localhost:8004
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
