--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -62,7 +62,9 @@ gov.pay.url=${GOV_PAY_URL:#{https://publicapi.payments.service.gov.uk/v1/payment
 gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
-
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:payment_app}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES:cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac}
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
@@ -152,6 +154,7 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 #hystrix.command.default.circuitBreaker.enabled=false
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
+bulk.scanning.payments.processed.url=${CCPAY_BULK_SCANNING_API_URL:https://ccpay-bulkscanning-api.platform.hmcts.net}
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:dummy}
 launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:dummy}@feesandpay.com
