--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -43,3 +43,4 @@ spring:
         pci-pal-antenna-probate-flow-id: pci-pal.antenna.probate.flow.id
         pci-pal-antenna-divorce-flow-id: pci-pal.antenna.divorce.flow.id
         pci-pal-antenna-financial-remedy-flow-id: pci-pal.antenna.financial.remedy.flow.id
+        payment-s2s-secret: payment.s2s.secret
