PAY-3147- Added fixes for code coverage issues on master

--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -87,3 +87,4 @@ launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:componenttest}@feesandp
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+spring.datasource.hikari.maximum-pool-size=2
